// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`secure generates security rules 1`] = `
Object {
  "collection": Object {
    "__type__": "collection",
    "path": "todos",
  },
  "rules": Object {
    "create": Array [
      Array [
        "!=",
        "request.auth.uid",
        "null",
      ],
      Array [
        "in",
        "get(/databases/$(database)/documents/accounts/$(get(/databases/$(database)/documents/projects/$(request.resource.data.projectId)).data.accountId)).data.memberIds",
        "request.auth.uid",
      ],
      Array [
        "is",
        "request.resource.data.title",
        "string",
      ],
    ],
    "read": Array [
      Array [
        "!=",
        "request.auth.uid",
        "null",
      ],
      Array [
        "in",
        "get(/databases/$(database)/documents/accounts/$(get(/databases/$(database)/documents/projects/$(resource.data.projectId)).data.accountId)).data.memberIds",
        "request.auth.uid",
      ],
    ],
    "update": Array [
      Array [
        "!=",
        "request.auth.uid",
        "null",
      ],
      Array [
        "in",
        "get(/databases/$(database)/documents/accounts/$(get(/databases/$(database)/documents/projects/$(resource.data.projectId)).data.accountId)).data.memberIds",
        "request.auth.uid",
      ],
      Array [
        "is",
        "resource.data.title",
        "string",
      ],
    ],
  },
}
`;

exports[`stringifyCollectionRules stringifies collection security rules 1`] = `
"match /todos/{resourceId} {
  allow read: if request.auth.uid != null && request.auth.uid in get(/databases/$(database)/documents/accounts/$(get(/databases/$(database)/documents/projects/$(resource.data.projectId)).data.accountId)).data.memberIds

  allow create: if request.auth.uid != null && request.auth.uid in get(/databases/$(database)/documents/accounts/$(get(/databases/$(database)/documents/projects/$(request.resource.data.projectId)).data.accountId)).data.memberIds && request.resource.data.title is string

  allow update: if request.auth.uid != null && request.auth.uid in get(/databases/$(database)/documents/accounts/$(get(/databases/$(database)/documents/projects/$(resource.data.projectId)).data.accountId)).data.memberIds && resource.data.title is string
}"
`;

exports[`stringifyDatabaseRules stringifies database security rules 1`] = `
"rules_version = '2';
service cloud.firestore {
  match /databases/{database}/documents {
    match /users/{resourceId} {
      allow read, write: if request.auth.uid == resourceId

      allow write: if request.auth.uid != null && resourceId == request.auth.uid && (!(\\"firstName\\" in request.resource.data) || request.resource.data.firstName is string)
    }

    match /accounts/{resourceId} {
      allow read: if request.auth.uid != null && request.auth.uid in resource.data.memberIds

      allow create: if request.auth.uid != null && request.resource.data.ownerId == request.auth.uid && request.resource.data.memberIds is list && request.resource.data.memberIds.size() == 1 && request.resource.data.memberIds[0] == request.auth.uid

      allow update: if request.auth.uid != null && resource.data.ownerId == request.auth.uid && resource.data.memberIds is list && resource.data.memberIds.size() == 1 && resource.data.memberIds[0] == request.auth.uid
    }

    match /projects/{resourceId} {
      allow read: if request.auth.uid != null && request.auth.uid in get(/databases/$(database)/documents/accounts/$(resource.data.accountId)).data.memberIds

      allow create: if request.auth.uid != null && request.auth.uid in get(/databases/$(database)/documents/accounts/$(request.resource.data.accountId)).data.memberIds && request.resource.data.title is string

      allow update: if request.auth.uid != null && request.auth.uid in get(/databases/$(database)/documents/accounts/$(resource.data.accountId)).data.memberIds && request.resource.data.title is string
    }

    match /todos/{resourceId} {
      allow read: if request.auth.uid != null && request.auth.uid in get(/databases/$(database)/documents/accounts/$(get(/databases/$(database)/documents/projects/$(resource.data.projectId)).data.accountId)).data.memberIds

      allow create: if request.auth.uid != null && request.auth.uid in get(/databases/$(database)/documents/accounts/$(get(/databases/$(database)/documents/projects/$(request.resource.data.projectId)).data.accountId)).data.memberIds && request.resource.data.title is string

      allow update: if request.auth.uid != null && request.auth.uid in get(/databases/$(database)/documents/accounts/$(get(/databases/$(database)/documents/projects/$(resource.data.projectId)).data.accountId)).data.memberIds && resource.data.title is string
    }
  }
}"
`;

exports[`stringifyDatabaseRules when the rules are loaded into the Firestore generates working security rules: Adding a project with a wrong payload 1`] = `
[FirebaseError: 7 PERMISSION_DENIED: 
false for 'create' @ L15]
`;

exports[`stringifyDatabaseRules when the rules are loaded into the Firestore generates working security rules: Adding a todo to a wrong project 1`] = `
[FirebaseError: 7 PERMISSION_DENIED: 
false for 'create' @ L23]
`;

exports[`stringifyDatabaseRules when the rules are loaded into the Firestore generates working security rules: Adding an account with a wrong id 1`] = `
[FirebaseError: 7 PERMISSION_DENIED: 
false for 'create' @ L7]
`;

exports[`stringifyDatabaseRules when the rules are loaded into the Firestore generates working security rules: Updating a project not belonging to the current user 1`] = `
[FirebaseError: 7 PERMISSION_DENIED: 
false for 'update' @ L17]
`;

exports[`stringifyDatabaseRules when the rules are loaded into the Firestore generates working security rules: Updating a todo not belonging to the current user 1`] = `
[FirebaseError: 7 PERMISSION_DENIED: 
false for 'update' @ L25]
`;

exports[`stringifyDatabaseRules when the rules are loaded into the Firestore generates working security rules: Updating an account not belonging to the current user 1`] = `
[FirebaseError: 7 PERMISSION_DENIED: 
false for 'update' @ L9]
`;
